[project]
name = "games-report-be"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcos Paulo",email = "mpaulosp.315@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pymongo[srv] (==3.12)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    {include = "__init__.py"}
]
[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

