[project]
name = "games-report-be"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcos Paulo",email = "mpaulosp.315@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymongo (>=4.10.1,<5.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "ijson (>=3.3.0,<4.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    {include = "__init__.py"}
]
exclude = [
    ".venv/**",
]